--- a/app/index.html
+++ b/app/index.html
@@ -14,7 +14,7 @@
 
     {{content-for "head-footer"}}
   </head>
-  <body>
+  <body class="p(0) m(0) ff(sans) bgc(gray-l3) c(gray-d1)">
     {{content-for "body"}}
 
     <script src="{{rootURL}}assets/vendor.js"></script>
